add: Initial support for flagged, dupe, and dead articles in RSS feed (#300)
* add: Support for flagged, dupe, and dead articles in RSS feed

* fix: Set Cache-Control to 1.5 hours (5400s)

* fix: Test

* fix: Article limit
